objects/layout_object__c.object
<CustomObject>
    <fields>
        <fullName>picklist_field__c</fullName>
        <label>picklist field</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>new value</fullName>
                </value>
                <value>
                    <fullName>value1</fullName>
                </value>
                <value>
                    <fullName>value 3</fullName>
                    <isActive>false</isActive>
                    <label>value 3</label>
                </value>
                <value>
                    <fullName>value2</fullName>
                    <isActive>false</isActive>
                    <label>value2</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>some_lookup_field__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ALM Job</label>
        <referenceTo>ALM_Job__c</referenceTo>
        <relationshipLabel>layout objects</relationshipLabel>
        <relationshipName>layout_objects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>some_lookup_filter_field__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Case.CaseNumber</field>
                <operation>equals</operation>
                <value>444</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>layout objects</relationshipLabel>
        <relationshipName>layout_objects</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>layout object</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>layout object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>layout objects</pluralLabel>
    <recordTypes>
        <fullName>test</fullName>
        <active>true</active>
        <label>test</label>
    </recordTypes>
    <recordTypes>
        <fullName>test555</fullName>
        <active>true</active>
        <label>test555</label>
    </recordTypes>
    <recordTypes>
        <fullName>type1</fullName>
        <active>true</active>
        <description>test 1</description>
        <label>type1</label>
    </recordTypes>
    <recordTypes>
        <fullName>type2</fullName>
        <active>true</active>
        <description>test 2</description>
        <label>type2</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <sharingReasons>
        <fullName>test_share_reason__c</fullName>
        <label>test share reason</label>
    </sharingReasons>
</CustomObject>